[package]
name = "clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
	"Window",
	"Document",
	"HtmlElement",
	"Element",
	"Event",
	"console",
	"Text",
] }
leptos_reactive = { git = "https://github.com/leptos-rs/leptos" }
sledgehammer_bindgen = "0.2.4"
sledgehammer_utils = "0.2.0"
paste = "1.0.14"

[profile.release]
lto = true
panic = "abort"
opt-level = 'z'
codegen-units = 1
