[package]
name = "clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
	"Window",
	"Document",
	"HtmlElement",
	"Element",
	"Event",
	"console",
	"Text",
] }
leptos_reactive = { git = "https://github.com/leptos-rs/leptos" }
sledgehammer_bindgen = "0.2.4"
sledgehammer_utils = "0.2.0"
paste = "1.0.14"
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2.8", features = ["js"] }
itertools = "0.11.0"
indexmap = "2.0.0"
rustc-hash = "1.1.0"
drain_filter_polyfill = "0.1.3"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
codegen-units = 1
