[package]
name = "tachy_maccy"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
leptos_hot_reload = { git = "https://github.com/leptos-rs/leptos", version = "0.5.0-beta2" }
proc-macro-error = { version = "1", default-features = false }
proc-macro2 = "1"
quote = "1"
rstml = "0.11"
syn = { version = "2", features = ["full"] }
