[package]
name = "tachy_maccy"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
attribute-derive = { version = "0.8", features = ["syn-full"] }
convert_case = "0.6.0"
itertools = "0.12"
leptos_hot_reload = "0.6"
prettyplease = "0.2.4"
proc-macro-error = { version = "1", default-features = false }
proc-macro2 = "1"
quote = "1"
rstml = "0.11"
syn = { version = "2", features = ["full"] }

[features]
nightly = []
