[package]
name = "tachy_reaccy"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
lazy_static = "1"
parking_lot = "0.12"
pin-project-lite = "0.2"
rustc-hash = "1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
slotmap = "1"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
tracing = { version = "0.1.40", optional = true }

[features]
serde = ["dep:serde", "dep:serde_json"]
tracing = ["dep:tracing"]
