[package]
name = "tachy_reaccy"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
glib = { version = "0.18", optional = true }
lazy_static = "1"
parking_lot = "0.12"
pin-project-lite = "0.2"
rustc-hash = "1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
slotmap = "1"
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
tracing = { version = "0.1.40", optional = true }
cfg-if = "1"
smallvec = "1"
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
glib = ["dep:glib"]
hydration = []
serde = ["dep:serde", "dep:serde_json"]
tracing = ["dep:tracing"]
tokio = ["dep:tokio"]
web = [
	"dep:js-sys",
	"dep:serde-wasm-bindgen",
	"dep:wasm-bindgen",
	"dep:wasm-bindgen-futures",
	"dep:web-sys",
]
