[package]
name = "tachy_route"
version = "0.1.0"
edition = "2021"

[dependencies]
const_str_slice_concat = { path = "../const_str_slice_concat" }
next_tuple = { path = "../next_tuple" }
tachydom = { path = "../tachydom" }
tachy_reaccy = { path = "../tachy_reaccy", optional = true }
paste = "1.0.14"
thiserror = "1.0.49"
tuplestructops = "0.3.0"
url = "2"
js-sys = { version = "0.3" }
wasm-bindgen = { version = "0.2" }
tracing = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
	# History/Routing
	"History",
	"HtmlAnchorElement",
	"Location",
	"MouseEvent",
	"Url",
	# Form
	"FormData",
	"HtmlButtonElement",
	"HtmlFormElement",
	"HtmlInputElement",
	"SubmitEvent",
	"Url",
	"UrlSearchParams",
	# Fetching in Hydrate Mode
	"Headers",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
	"Window",
]

[features]
tracing = ["dep:tracing"]
reaccy = ["dep:tachy_reaccy"]
