[package]
name = "tachydom"
version = "0.1.0"
edition = "2021"

[dependencies]
slotmap = { version = "1", optional = true }
leptos_reactive = { version = "0.5", optional = true }
once_cell = "1.18.0"
paste = "1.0.14"
wasm-bindgen = "=0.2.87"
web-sys = { version = "0.3.64", features = [
	"Window",
	"Document",
	"HtmlElement",
	"Element",
	"Event",
	"console",
	"Comment",
	"Text",
	"Node",
	"HtmlTemplateElement",
	"DocumentFragment",
	"DomTokenList",
	"CssStyleDeclaration",
	# Events we cast to in leptos_macro -- added here so we don't force users to import them
	"AddEventListenerOptions",
	"AnimationEvent",
	"BeforeUnloadEvent",
	"ClipboardEvent",
	"CompositionEvent",
	"CustomEvent",
	"DeviceMotionEvent",
	"DeviceOrientationEvent",
	"DragEvent",
	"ErrorEvent",
	"Event",
	"FocusEvent",
	"GamepadEvent",
	"HashChangeEvent",
	"InputEvent",
	"KeyboardEvent",
	"MessageEvent",
	"MouseEvent",
	"PageTransitionEvent",
	"PointerEvent",
	"PopStateEvent",
	"ProgressEvent",
	"PromiseRejectionEvent",
	"SecurityPolicyViolationEvent",
	"StorageEvent",
	"SubmitEvent",
	"TouchEvent",
	"TransitionEvent",
	"UiEvent",
	"WheelEvent",
] }
drain_filter_polyfill = "0.1.3"
indexmap = "2.0.2"
rustc-hash = "1.1.0"

[features]
default = ["testing", "leptos"]
hydrate = []
ssr = []
nightly = ["leptos_reactive/nightly"]
testing = ["dep:slotmap"]
leptos = ["dep:leptos_reactive"]
