[package]
name = "tachydom"
version = "0.1.0"
edition = "2021"

[dependencies]
const_str_slice_concat = { path = "../const_str_slice_concat" }
next_tuple = { path = "../next_tuple" }
tachy_reaccy = { path = "../tachy_reaccy", optional = true }
slotmap = { version = "1", optional = true }
leptos_reactive = { version = "0.5", optional = true }
once_cell = "1.18.0"
paste = "1.0.12"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3.64", features = [
	"Window",
	"Document",
	"HtmlElement",
	"HtmlInputElement",
	"Element",
	"Event",
	"console",
	"Comment",
	"Text",
	"Node",
	"HtmlTemplateElement",
	"DocumentFragment",
	"DomTokenList",
	"CssStyleDeclaration",
	"ShadowRoot",

	# Events we cast to in leptos_macro -- added here so we don't force users to import them
	"AddEventListenerOptions",
	"AnimationEvent",
	"BeforeUnloadEvent",
	"ClipboardEvent",
	"CompositionEvent",
	"CustomEvent",
	"DeviceMotionEvent",
	"DeviceOrientationEvent",
	"DragEvent",
	"ErrorEvent",
	"Event",
	"FocusEvent",
	"GamepadEvent",
	"HashChangeEvent",
	"InputEvent",
	"KeyboardEvent",
	"MessageEvent",
	"MouseEvent",
	"PageTransitionEvent",
	"PointerEvent",
	"PopStateEvent",
	"ProgressEvent",
	"PromiseRejectionEvent",
	"SecurityPolicyViolationEvent",
	"StorageEvent",
	"SubmitEvent",
	"TouchEvent",
	"TransitionEvent",
	"UiEvent",
	"WheelEvent",

	# HTML Element Types
	"HtmlHtmlElement",
	"HtmlBaseElement",
	"HtmlHeadElement",
	"HtmlLinkElement",
	"HtmlMetaElement",
	"HtmlStyleElement",
	"HtmlTitleElement",
	"HtmlBodyElement",
	"HtmlHeadingElement",
	"HtmlQuoteElement",
	"HtmlDivElement",
	"HtmlDListElement",
	"HtmlHrElement",
	"HtmlLiElement",
	"HtmlOListElement",
	"HtmlParagraphElement",
	"HtmlPreElement",
	"HtmlUListElement",
	"HtmlAnchorElement",
	"HtmlBrElement",
	"HtmlDataElement",
	"HtmlQuoteElement",
	"HtmlSpanElement",
	"HtmlTimeElement",
	"HtmlAreaElement",
	"HtmlAudioElement",
	"HtmlImageElement",
	"HtmlMapElement",
	"HtmlTrackElement",
	"HtmlVideoElement",
	"HtmlEmbedElement",
	"HtmlIFrameElement",
	"HtmlObjectElement",
	"HtmlParamElement",
	"HtmlPictureElement",
	"HtmlSourceElement",
	"SvgElement",
	"HtmlCanvasElement",
	"HtmlScriptElement",
	"HtmlModElement",
	"HtmlTableCaptionElement",
	"HtmlTableColElement",
	"HtmlTableColElement",
	"HtmlTableElement",
	"HtmlTableSectionElement",
	"HtmlTableCellElement",
	"HtmlTableSectionElement",
	"HtmlTableCellElement",
	"HtmlTableSectionElement",
	"HtmlTableRowElement",
	"HtmlButtonElement",
	"HtmlDataListElement",
	"HtmlFieldSetElement",
	"HtmlFormElement",
	"HtmlInputElement",
	"HtmlLabelElement",
	"HtmlLegendElement",
	"HtmlMeterElement",
	"HtmlOptGroupElement",
	"HtmlOutputElement",
	"HtmlProgressElement",
	"HtmlSelectElement",
	"HtmlTextAreaElement",
	"HtmlDetailsElement",
	"HtmlDialogElement",
	"HtmlMenuElement",
	"HtmlSlotElement",
	"HtmlTemplateElement",
	"HtmlOptionElement",
] }
drain_filter_polyfill = "0.1.3"
indexmap = "2.0.2"
rustc-hash = "1.1.0"
tokio = { version = "1", optional = true, features = ["rt"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
futures = "0.3"
parking_lot = "0.12"
pin-project-lite = "0.2"
itertools = "0.12.0"
send_wrapper = "0.6.0"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = ["testing"]
delegation = []                       # enables event delegation
hydrate = []
ssr = []
nightly = ["leptos_reactive/nightly"]
testing = ["dep:slotmap"]
leptos = ["dep:leptos_reactive"]
reaccy = ["dep:tachy_reaccy"]
tokio = ["dep:tokio"]
web = ["dep:wasm-bindgen-futures"]
