[package]
name = "tachys"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos_config = "0.5"
tachydom = { path = "../tachydom", features = ["reaccy"] }
tachy_maccy = { path = "../tachy_maccy" }
tachy_reaccy = { path = "../tachy_reaccy" }
typed-builder = "0.18"
typed-builder-macro = "0.18"

[features]
hydration = ["tachy_reaccy/hydration"]
islands = ["tachydom/islands"]
nightly = ["tachydom/nightly", "tachy_maccy/nightly"]
web = ["tachydom/web", "tachy_reaccy/web"]
