[package]
name = "gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tachydom = { path = "../../tachydom", features = ["nightly", "reaccy"] }
gtk = { version = "0.5.0", package = "gtk4" }
tachy_reaccy = { path = "../../tachy_reaccy", features = ["glib"] }

[workspace]
